--- a/KFACBT_Toolkit/KFACBT_Toolkit/KFACBT_Toolkit.csproj
+++ b/KFACBT_Toolkit/KFACBT_Toolkit/KFACBT_Toolkit.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="iNKORE.UI.WPF.Modern" Version="0.9.30" />
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
+    <PackageReference Include="System.Drawing.Common" Version="4.7.3" />
     <PackageReference Include="WPF-UI" Version="3.0.5" />
   </ItemGroup>
 
